# glew_glfw_template

./: CMakeLists.txt  main.cpp  readme.md
lib/: gl_window.cpp  gl_window.h
